[tool.poetry]
name = "ml-study"
version = "0.1.0"
description = ""
authors = ["yoshiki301 <yoshiki301@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.9.1"
torch = "^1.10.2"
numpy = "^1.22.2"
transformers = {git = "https://github.com/huggingface/transformers"}
transformers-interpret = {git = "https://github.com/cdpierse/transformers-interpret"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
